[gd_scene load_steps=5 format=3 uid="uid://8eaj85jlw0mw"]

[ext_resource type="Script" uid="uid://crvtj25rsvdw3" path="res://scenes/screens/main_menu.gd" id="1_tgk1t"]
[ext_resource type="Texture2D" uid="uid://fcp11y7nuxxq" path="res://assets/main_menu/background.png" id="2_idsrk"]
[ext_resource type="Texture2D" uid="uid://5j3e7xly2b5v" path="res://assets/main_menu/characters_001.png" id="3_5weqt"]
[ext_resource type="AudioStream" uid="uid://ber8omtci2hb" path="res://assets/audio/main_menu.wav" id="4_5weqt"]

[node name="Mainmenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tgk1t")

[node name="Menu" type="Node2D" parent="."]

[node name="background_parent" type="Node2D" parent="Menu"]

[node name="background" type="TextureRect" parent="Menu/background_parent"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -512.0
offset_top = -768.0
offset_right = 512.0
offset_bottom = 768.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_idsrk")
stretch_mode = 4

[node name="character_parent" type="Node2D" parent="Menu"]

[node name="character" type="TextureRect" parent="Menu/character_parent"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -524.0
offset_top = -977.0
offset_right = 500.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_5weqt")
stretch_mode = 4

[node name="TitleBackground" type="ColorRect" parent="Menu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color(0.8975841, 0.2917904, 0.29780832, 1)

[node name="Title" type="Label" parent="Menu/TitleBackground"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -516.5
offset_top = -73.5
offset_right = 516.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 107
text = "Interstellar Odyssey"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
offset_left = -180.0
offset_top = -154.0
offset_right = 180.0
offset_bottom = 154.0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Button_Start" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 150
text = "Start"

[node name="Button_Quit" type="Button" parent="Menu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 60
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5weqt")

[connection signal="pressed" from="Menu/VBoxContainer/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Button_Quit" to="." method="_on_button_quit_pressed"]
